# rustshot-gtk

./: Cargo.toml  README.md  style.css  ù
src/: constants.rs  handles.rs  main.rs  rustshot_gui.rs  screen_recorder.rs  toolbox.rs
src/drawing_area_boxes/: mod.rs
src/drawing_area_manager/: drawables.rs  imp.rs  mod.rs  mod.rs.bak
src/drawing_area_settings/: drawing_area_settings.toml  mod.rs
src/edge/: imp.rs  mod.rs
src/geometry/: imp.rs  mod.rs  mod.rs.bak
src/handle/: imp.rs  mod.rs
src/handles/: mod.rs
src/rustshot_gui/: mod.rs
src/screenshot_box/: imp.rs  mod.rs
src/settings_window/: imp.rs  mod.rs
src/spin_button/: imp.rs  mod.rs
src/toolbox/: imp.rs  mod.rs  toolbox_bar.rs.bak
src/toolbox_bar/: imp.rs  mod.rs
src/toolbox_buttons/: mod.rs  mod.rs.bak
src/toolbox_buttons/arc_button/: imp.rs  mod.rs
src/toolbox_buttons/arc_button.bak/: mod.rs
src/toolbox_buttons/arc_no_fill_button/: imp.rs  mod.rs
src/toolbox_buttons/arrow_button/: imp.rs  mod.rs
src/toolbox_buttons/box_button/: imp.rs  mod.rs
src/toolbox_buttons/box_no_fill_button/: imp.rs  mod.rs
src/toolbox_buttons/color_button/: imp.rs  mod.rs
src/toolbox_buttons/copy_screenshot_button/: imp.rs  mod.rs
src/toolbox_buttons/freehand_button/: imp.rs  mod.rs
src/toolbox_buttons/fullscreen_button/: imp.rs  mod.rs
src/toolbox_buttons/input_text_button/: imp.rs  mod.rs
src/toolbox_buttons/line_button/: imp.rs  mod.rs
src/toolbox_buttons/screen_recorder/: imp.rs  (+1 more)
src/toolbox_settings_box/: mod.rs
styles/: coast.css  latte.css  mocha.css  sea.css  siena.css  style.css
(+22 files in other folders)
