[package]
name = "rustshot-gtk"
version = "0.6.0"
edition = "2024"

[dependencies]
serde   = { version = "1.0", features = ["derive"] }
toml    = "*"          # latest stable at the time of writing
itoa = "1.0"
nix = "0.15.0"
gtk = { git = "https://github.com/gtk-rs/gtk4-rs.git", package = "gtk4",  features = [
  "v4_20",
] }
